[workspace]
resolver = "2"
members = ["ssca-sys", "analyzer"]
default-members = ["ssca-sys", "analyzer"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
bytemuck = "1.14.0"
ctrlc = "3.4.1"
num = "0.4.1"
num-complex = { version = "0.4.4", features=["bytemuck"]} 
rand = "0.8.5"
rand_distr = "0.4.3"
ssca-sys = { version = "0.1.0", path = "./ssca-sys" }
criterion = { version = "0.5.1", features = ["html_reports"] }
cc = "1.0.83"
rustdevice = { git = "ssh://git@github.com/ucsdwcsng/rustycuda.git"}