[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.14.0"
ctrlc = "3.4.1"
num = "0.4.1"
radiod = { git = "ssh://git@github.com/ucsdwcsng/radiod.git", version = "0.2.0" }
ssca-sys = { version = "0.1.0", path = "../ssca-sys" }
