[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
ctrlc.workspace = true
num.workspace = true
num-complex.workspace = true
rand.workspace = true
rand_distr.workspace = true
ssca-sys.workspace = true
rustdevice.workspace = true

[dev-dependencies]
criterion.workspace = true


[[bench]]
name = "ssca_bench"
harness = false