cmake_minimum_required(VERSION 3.10)
project(analyzer LANGUAGES CUDA CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 17)
enable_language(CUDA)
# find_package(OpenMP)
#find_package(CUDAToolkit REQUIRED)
SET(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
add_executable(analyzer)
# add_subdirectory(pybind11)
# pybind11_add_module(analyzer "./python_bindings_automate.cu" "./spectral_analyzer_automate.cu")
target_sources(analyzer PRIVATE "./src/spectral_analyzer.cu" "./src/main.cu")
set_property(TARGET analyzer PROPERTY CUDA_ARCHITECTURES 75)
find_package(CUDA)
# target_compile_options(analyzer PRIVATE "$<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>")
target_link_libraries(analyzer PRIVATE cufft)